Dodano możliwość opisania zadania

--- a/client/index.html
+++ b/client/index.html
@@ -32,6 +32,9 @@
 	          </button>
 	        </div>
 	      </div>
+	      <div class="control is-expanded">
+	          <input class="input" type="text" name="description" id="description" placeholder="Opis">
+	      </div>
 	    </form>
 	  </div>
 	</div>
