Dodano wyświetlanie opisu na liście zadań

--- a/client/index.html
+++ b/client/index.html
@@ -51,6 +51,7 @@
 	      <thead>
 	        <tr>
 	          <th>Zadanie</th>
+	          <th>Opis</th>
 	        </tr>
 	      </thead>
 	      <tbody id="tasksList">
