Dodano przycisk do odświeżania listy zadań

--- a/client/index.html
+++ b/client/index.html
@@ -47,6 +47,9 @@
 
 	<div class="columns is-centered">
 	  <div class="column is-8">
+	  	<button class="button is-primary" onclick="listTasks()" id="refreshList">
+	            Odśwież
+		</button>
 	    <table class="table is-fullwidth is-striped">
 	      <thead>
 	        <tr>
