Dodano ikonę do przycisku odświeżania

--- a/client/index.html
+++ b/client/index.html
@@ -47,8 +47,9 @@
 
 	<div class="columns is-centered">
 	  <div class="column is-8">
-	  	<button class="button is-primary" onclick="listTasks()" id="refreshList">
-	            Odśwież
+	  	<button class="button is-light" onclick="listTasks()" id="refreshList">
+	            <i class="fa fa-retweet" aria-hidden="true"></i>
+	            &nbsp;Odśwież
 		</button>
 	    <table class="table is-fullwidth is-striped">
 	      <thead>
